[gd_scene load_steps=9 format=3 uid="uid://cx03r6tuwep08"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_2clkx"]
[ext_resource type="Texture2D" uid="uid://hebb1iilhrnm" path="res://Sprite/DOLLAR.png" id="3_1im32"]
[ext_resource type="Texture2D" uid="uid://dfq5vwgv3gw3k" path="res://Sprite/render_map.jpg" id="3_5owdx"]
[ext_resource type="Texture2D" uid="uid://d4cjjaamforxy" path="res://Sprite/bgmenu.png" id="3_ji7ho"]
[ext_resource type="Texture2D" uid="uid://bcckhlmsgeal" path="res://Sprite/people_icon.png" id="4_lxqfe"]
[ext_resource type="AudioStream" uid="uid://eeemg0tofhnp" path="res://soundtrack.wav" id="6_tp3yh"]

[sub_resource type="LabelSettings" id="LabelSettings_7451p"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_61sfg"]
font_size = 32

[node name="Node2D" type="Node2D"]
script = ExtResource("1_2clkx")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -14234.0
offset_top = -7347.0
offset_right = 87939.0
offset_bottom = 46843.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_5owdx")
expand_mode = 1
stretch_mode = 1
flip_h = true
flip_v = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1127.0
offset_top = -630.0
offset_right = -1087.0
offset_bottom = -590.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -13.0
offset_top = -12.0
offset_right = 144.0
offset_bottom = 233.0
texture = ExtResource("3_ji7ho")

[node name="GridContainer" type="GridContainer" parent="Control"]
layout_mode = 2
offset_right = 132.0
offset_bottom = 221.0
metadata/_edit_group_ = true

[node name="MoneyContainer" type="HBoxContainer" parent="Control/GridContainer"]
layout_mode = 2
alignment = 1

[node name="Money" type="Label" parent="Control/GridContainer/MoneyContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_7451p")
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Control/GridContainer/MoneyContainer"]
layout_mode = 2

[node name="MoneySprite" type="TextureRect" parent="Control/GridContainer/MoneyContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_1im32")

[node name="VSplitContainer" type="VSplitContainer" parent="Control/GridContainer"]
layout_mode = 2

[node name="PeopleContainer" type="HBoxContainer" parent="Control/GridContainer"]
layout_mode = 2
alignment = 1

[node name="PeopleNumber" type="Label" parent="Control/GridContainer/PeopleContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_61sfg")
horizontal_alignment = 1

[node name="People Sprite" type="TextureRect" parent="Control/GridContainer/PeopleContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_lxqfe")

[node name="VSplitContainer2" type="VSplitContainer" parent="Control/GridContainer"]
layout_mode = 2

[node name="BuyPeople" type="Button" parent="Control/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
action_mode = 0
text = "++"
icon = ExtResource("4_lxqfe")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
editor_draw_limits = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tp3yh")
autoplay = true

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(1, 0.372549, 0.545098, 0.501961)

[node name="ActivePlayer" type="OptionButton" parent="."]
offset_left = 830.0
offset_top = -630.0
offset_right = 1120.0
offset_bottom = -550.0
item_count = 2
selected = 0
popup/item_0/text = "Player1"
popup/item_0/id = 0
popup/item_1/text = "Player2"
popup/item_1/id = 1

[node name="BuyRegion" type="Button" parent="."]
offset_left = -1127.0
offset_top = 512.0
offset_right = -794.0
offset_bottom = 620.0
theme_override_font_sizes/font_size = 50
text = "Buy Region"

[connection signal="pressed" from="Control/GridContainer/BuyPeople" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="ActivePlayer" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="BuyRegion" to="." method="_on_buy_region_pressed"]
